Attempt to fix overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -54,3 +54,7 @@ body,
 .body > div:nth-child(odd) {
   background-color: #eee;
 }
+
+.address {
+  word-wrap: "break-word"
+}
